@@ -55,6 +55,7 @@ us a note on ns-developers mailing list.</p>
 <h2>New API:</h2>
 <ul>
 <li>A new TCP congestion control, <b>TcpLinuxReno</b>, has been added.</li>
+<li>Added, to <b>PIE queue disc</b>, <b>queue delay calculation using timestamp</b> feature (Linux default behavior), <b>cap drop adjustment</b> feature (Section 5.5 of RFC 8033), <b>ECN</b> (Section 5.1 of RFC 8033) and <b>derandomization</b> feature (Section 5.4 of RFC 8033).</li>
 </ul>
 <h2>Changes to existing API:</h2>
 <ul>
@@ -69,6 +70,7 @@ us a note on ns-developers mailing list.</p>
 <ul>
 <li>Support for <b>RIFS</b> has been dropped from wifi. RIFS has been obsoleted by the 802.11 standard and support for it was not implemented according to the standard.</li>
 <li>The behavior of <b>TcpPrrRecovery</b> algorithm was aligned to that of Linux.</b>
+<li> <b>PIE</b> queue disc now uses <b>Timestamp</b> for queue delay calculation as default instead of <b>Dequeue Rate Estimator</b></li>
 </ul>
 
 <hr>
